<resources>
    <string name="app_name">DatabaseOfTasks</string>
    <string name="timer">Timer: </string>
    <string name="create">New Task</string>
    <string name="update">Update </string>
    <string name="read">Read</string>
    <string name="delete">Delete</string>
    <string name="task_title">Task Title: </string>
    <string name="task_time">Task Time: </string>
    <string name="start_timer">Start Timer</string>
    <string name="pause_timer">Pause Timer</string>
    <string name="complete">Complete</string>
    <string name="time"></string>
</resources>
