<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".TaskActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textAlignment="center" />

    <Button
        android:id="@+id/start_timer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer" />

    <Button
        android:id="@+id/pause_timer_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause_timer" />

    <Button
        android:id="@+id/complete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="onClickDelete"/>
</LinearLayout>